--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
-/* CSS Document for blockSettings */
+/* CSS Document for fmModulSettings */
 /* v1.0 */
 
-.fmBlockSettings { padding-top: 25px; background: #e0f5ee; }
+.fmBlockSettings { position: relative; padding-top: 25px; background: #e0f5ee; }
 .fmBlockSettings .fmBS-inner { background: #FFF; }
 
 .fmBlockSettings .fmBS-toggler { position: relative; background: #f3f6fb; cursor: pointer; color: #7d8288; padding: 10px 30px 10px 15px; transition: all .5s ease; }
@@ -12,8 +12,8 @@
 
 .fmBlockSettings .fmBS-content { display: none; padding: 15px; border-top: 1px solid #c1c9d4; }
 .fmBlockSettings .nav > li > a { border-radius: 4px 4px 0px 0px; border-top-width: 2px; border-color: #9ca5b2 #9ca5b2 #9ca5b2; background: #EEE; color: #555; padding: 7px 10px; }
-	.fmBlockSettings .nav > li > a:hover { background: #FFF; }
-	.fmBlockSettings .nav > li.active > a { background: #FFF; border: 1px solid #9ca5b2; border-bottom-color: transparent; border-top-width: 2px; }	
+	.fmBlockSettings .nav > li > a:hover { background: #FFF; color: #555; border-color: #9ca5b2 #9ca5b2 #9ca5b2; }
+	.fmBlockSettings .nav > li.active > a, .fmBlockSettings .nav > li.active > a:hover, .fmBlockSettings .nav > li.active > a:focus { background: #FFF; border: 1px solid #9ca5b2; border-bottom-color: transparent; border-top-width: 2px; }	
 .fmBlockSettings .tab-content { padding: 20px 20px 20px; border: 1px solid #9ca5b2; border-top: none; background: #FFF; }
 
 .fmBlockSettings .fmBS-content dl { margin: 15px 0px 0px; }
@@ -27,8 +27,9 @@
 	.fmBlockSettings .fmBS-fieldset-inline dt label { font-weight: normal; margin-bottom: 2px; }
 
 
-.fmBlock-offline {}
+.fmBlock-offline .panel-body { position: relative; }
 .fmBlock-offline .panel-body::before { content: ""; display: block; position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 100; background: rgba(107, 124, 148, 0.25); }
+.fmBlock-offline .fmBlockSettings:before { content: ''; position: absolute; top: 0; left: 0px; width: 100%; height: 25px; background: rgba(107, 124, 148, 0.25); }
 .fmBlockOfflinestatus { background: #707d8f; padding: 10px 15px; color: rgba(255,255,255, 0.9); border-top: 1px solid #dfe3e9; }
 
 
